--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Etch-a-sketch</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-  <center><button id="button">Change number squares</button></center>    
-    <div id="container"></div>
+
+    <div id="main-container" class="container">
+      <button id="reset-button" class="button">Change size</button>
+      <div id="grid-container" class="grid"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
